--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,8 +1,32 @@
 server {
     listen 80;
+    server_tokens off;
+    server_name 127.0.0.1;
+
+    location /static/admin/ {
+        root /var/html/;
+    }
+
+    location /static/rest_framework/ {
+        root /var/html/;
+    }
+
+    location /media/ {
+        root /var/html/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
+    }
+
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_pass http://web:8000/api/;
+    }
+
+    location /admin/ {
+        proxy_pass http://web:8000/admin/;
     }
     location / {
         root /usr/share/nginx/html;
