--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       env_file:
         - ./.env
   web:
-    build: ../backend
+    image: ivanddoker/foodgram:latest
     restart: always
     volumes:
       - static_value:/app/static/
