--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,5 +9,7 @@ COPY requirements.txt .
 RUN pip3 install -r requirements.txt --no-cache-dir
 
 COPY . .
-
+RUN apt update && apt install fonts-indic -y && fc-cache -f
+RUN apt-get update; apt-get install -y fontconfig
+RUN fc-cache -f -v
 CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000" ]
