--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
         python -m flake8
   build_and_push_backend_to_docker_hub:
-    name: Push Docker image to Docker Hub
+    name: Push backend image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
     steps:
