--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
+      - redoc:/app/recipes/docs/
     depends_on:
       - db
     env_file:
@@ -27,9 +28,9 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
+      - redoc:/usr/share/nginx/html/api/docs/
     depends_on:
       - web
 
@@ -37,3 +38,4 @@ volumes:
   static_value:
   media_value:
   data_value:
+  redoc:
