--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,6 @@
 name: Django-app workflow
 
-on:
-  push:
-    branches: [ master ]
-    paths-ignore:
-      - '**/README.md'
+on: [push]
 
 jobs:
   tests:
